[project]
name = "iras-api"
version = "0.1.0"
description = "IRAS GST Register API checker with Streamlit UI (async and sync versions)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "aiohttp>=3.13.2",
  "openpyxl>=3.1.5",
  "pandas>=2.3.3",
  "requests>=2.32.3",
  "streamlit>=1.40.1",
]
